--- a/CarGallery/Views/Carro/Create.cshtml
+++ b/CarGallery/Views/Carro/Create.cshtml
@@ -49,9 +49,9 @@
         </form>
     </div>
 </div>
-
+<br />
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a href="/Home/Search" class="btn btn-primary">Voltar</a>
 </div>
 
 @section Scripts {
