--- a/CarGallery/Views/Fabricante/Details.cshtml
+++ b/CarGallery/Views/Fabricante/Details.cshtml
@@ -9,7 +9,7 @@
 <div>
     <h4>Fabricante</h4>
     <hr />
-    <dl class="row">
+    <dl class="row fundo">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index" class="btn btn-primary">Voltar</a>
 </div>
